rust/transpiler/tests/errors/unclosed_component.hyper
<{Button} type="submit">
    Click me
